[tool.poetry]
name = "pipeline_control"
version = "0.1.3"
description = "Controls loads of newly ingested data. Triggers"
authors = ["Severin Gassauer-Fleissner <sev@amazon.com>"]
license = "Amazon"

[tool.poetry.dependencies]
python = "3.7.*"
boto3 = "^1.17.105"
ssm-parameter-store = "^19.11.0"
kubernetes = "^17.17.0"
awscli = "^1.19.106"
environ-config = "^21.2.0"
neptune_load = { file = "../neptune_load/dist/neptune_load-0.1.3.tar.gz" }
pynamodb = "^5.1.0"
hikaru = "^0.8b0"
typed-ast = "^1.4.3"

[tool.poetry.dev-dependencies]
moto = "^2.0.10"
pytest = "^6.2.4"
mock = "^4.0.3"
pyexpect = "^1.0.21"
black = "^21.6b0"
isort = "^5.9.1"
pytest-watch = "^4.2.0"
freezegun = "^1.1.0"
pytest-cov = "^2.12.1"
bandit = "^1.7.0"
autoflake = "^1.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
