[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Severin Gassauer-Fleissner <sev@amazon.com>"]
license = "Amazon"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.18.9"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
